# SCIA_TEXTMINING

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README  TextMiningApp  configure  node.cc  node.hh  parser.cc  parser.hh  test.txt
doc/: Doxyfile  doc.conf  doxygen_sqlite3.db
src/: app.cc  compiler.cc  node.cc  node.hh  search.cc  search.hh  trie.cc  trie.hh
